# tripsu

./: .envrc  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  _config.yml  justfile  rust-toolchain.toml
.githooks/: README.md
.githooks/pre-commit/: .common.sh  0-list-staged-files.sh  1-git-lfs-check.sh  2-format.sh
.github/: pipeline.yaml  pull_request_template.md
.github/actions/setup-nix/: action.yaml
.github/workflows/: benchmark.yaml  main-and-pr.yaml  normal.yaml  pipeline.yaml  release.yaml
.gitlab/: pipeline.yaml
.gitlab/container/: Containerfile
.gitlab/images/: Containerfile
.gitlab/scripts/: before-script.sh  upload-images.sh
docs/: development-guide.md  tutorial.md
docs/assets/: diagram.mmd
nix/: flake.nix
src/: crypto.rs  index.rs  io.rs  log.rs  main.rs  model.rs  pass_first.rs  pass_second.rs  pseudo.rs  rdf_types.rs  rdf_types.rs.orig  rules.rs  uris.rs
src/common/: log.rs
tests/data/: config.yaml  rules.yaml  test.nt  type_index.json  type_index.yaml  type_map.nt
tools/: build-image.sh  build-package.sh  format-rust.sh  general.sh  lint-rust.sh  lint-ub-rust.sh  release.sh  start-gitlab-runner-docker.sh  start-gitlab-runner-podman.sh
tools/bench/: benchmark.sh
tools/ci/: assert-tag.sh  before-script.sh  check-git-lfs.sh  create-github-release.sh  general.sh  push-image.sh  setup-git.sh  setup-nix-cache.sh  upload-ci-images.sh  upload-image.sh
tools/ci/images/: Containerfile
tools/nix/: flake.nix
tools/nix/images/: ci.nix  rdf-protect.nix  tripsu.nix
tools/nix/pkgs/: rdf-protect.nix  tripsu.nix
tools/nix/pkgs/bootstrap/: default.nix
(+2 files in other folders)
