[dependencies]
  bitflags = '2.5.0'
  io-enum = '1.1.3'
  rio_api = '0.8.4'
  rio_turtle = '0.8.4'
  serde_yml = '0.0.10'
  slog = '2.7.0'
  slog-async = '2.8.0'
  slog-term = '2.9.0'
  tempfile = '3.10.1'

  [dependencies.clap]
    features = ['derive']
    version = '4.5.7'

  [dependencies.serde]
    features = ['derive']
    version = '1.0'

[package]
  edition = '2021'
  name = 'rdf-protect'
  version = '0.0.1'
