[dependencies]
  bitflags = '2.5.0'
  blake3 = '1.5.1'
  io-enum = '1.1.3'
  rand = '0.8.5'
  rio_api = '0.8.4'
  rio_turtle = '0.8.4'
  rstest = '0.21.0'
  serde_json = '1.0.127'
  serde_yml = '0.0.10'
  slog = '2.7.0'
  slog-async = '2.8.0'
  slog-term = '2.9.0'
  tempfile = '3.10.1'

  [dependencies.clap]
    features = ['derive']
    version = '4.5.7'

  [dependencies.serde]
    features = ['derive']
    version = '1.0'

  [dependencies.smallvec]
    features = ['serde']
    version = '1.13.2'

[package]
  edition = '2021'
  name = 'tripsu'
  version = '0.2.0'
